--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/flight?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Backdoor$
+spring.thymeleaf.cache=false
