1) Adding angular skeleton project to aodb to be used as admin frontend 2) Configuraing angular project with production build steps and deploy steps to copy built binaries to spring boots static resouce folder where they can be served

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,23 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+
+src/main/client/dist
+src/main/client/tmp
+src/main/client/out-tsc
+
+# dependencies
+src/main/client/node_modules
+
+# IDEs and editors
+src/main/client/*.idea
+src/main/client/*.project
+
+# misc
+src/main/client/coverage
+src/main/client/npm-debug.log
+src/main/client/typings
+
+# e2e
+src/main/client/e2e/*.js
+src/main/client/e2e/*.map
