--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 flifo.apiKey=2cfd0827f82ceaccae7882938b4b1627
-flifo.aeroAPIEndPoint=https://flifo.api.aero
-flifo.departureflightUpdateEndPoint=/flifo/v3/flights/mia/d
-flifo.flightEndPoint=/flifo/v3/flight/
+flifo.aeroAPIEndPoint=https://flifo.api.aero/flifo/v3/flights
+#flifo.aeroAPIEndPoint=https://flifo.api.aero
+#flifo.departureflightUpdateEndPoint=/flifo/v3/flights/mia/d
+#flifo.flightEndPoint=/flifo/v3/flight/
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/flight?useSSL=false
 spring.datasource.username=root
