--- a/src/main/client/package.json
+++ b/src/main/client/package.json
@@ -28,9 +28,11 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "mkdirp": "^0.5.1",
+    "moment": "^2.18.1",
     "primeng": "^4.1.0",
     "rimraf": "^2.6.1",
     "rxjs": "^5.1.0",
+    "underscore": "^1.8.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
